@@ -26,6 +26,8 @@ Version 2.5.0-Beta 1
     * Auto-save the playlist so that it is not lost if Amarok crashes.
 
   CHANGES:
+    * Both Delete and Move to Trash actions are now offered in the collection
+      browser context menu. (BR 286356)
     * Amarok now depends on libmygpo-qt > 1.0.5.
     * New USB Mass Storage media-device plugin using the Amarok Collection Scanner.
     * Browser widget backgrounds can now be enabled/disabled.
